Push notifications completely configured with certificates.

--- a/PushNotificationsExample/Info.plist
+++ b/PushNotificationsExample/Info.plist
@@ -36,5 +36,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>Pushwoosh_APPID</key>
+	<string>E9990-08BB8</string>
 </dict>
 </plist>
